--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,12 @@
         "-o",
         "${workspaceFolder}/main",
         "${workspaceFolder}/main.cpp",
-        "${workspaceFolder}/draw_static_square/draw_static_square.cpp"
+        "${workspaceFolder}/draw_static_square/draw_static_square.cpp",
+        "${workspaceFolder}/draw_dynamic_square_for/draw_dynamic_square_for.cpp",
+        "${workspaceFolder}/draw_static_half_pyramid_for/draw_static_half_pyramid_for.cpp",
+        "${workspaceFolder}/draw_static_half_pyramid_while/draw_static_half_pyramid_while.cpp"
+
+
       ],
       "group": {
         "kind": "build",
