--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -14,7 +14,9 @@
         "${workspaceFolder}/draw_dynamic_square_for/draw_dynamic_square_for.cpp",
         "${workspaceFolder}/draw_static_half_pyramid_for/draw_static_half_pyramid_for.cpp",
         "${workspaceFolder}/draw_static_half_pyramid_while/draw_static_half_pyramid_while.cpp",
-        "${workspaceFolder}/draw_static_full_pyramid_for/draw_static_full_pyramid_for.cpp"
+        "${workspaceFolder}/draw_static_full_pyramid_for/draw_static_full_pyramid_for.cpp",
+        "${workspaceFolder}/Lowercase_Uppercase/Lowercase_Uppercase.cpp"
+
         
       ],
       "group": {
